# docs/swagger.yaml
@@ -50,13 +50,102 @@ info:
   title: Cumulus3 API
   version: "1.0"
 paths:
-  /api/v1/file_info:
+  /base/files/id/{id}:
+    get:
+      description: Downloads a file by its old Cumulus ID
+      parameters:
+      - description: Old Cumulus ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/octet-stream
+      responses:
+        "200":
+          description: File content
+          schema:
+            type: file
+        "404":
+          description: File not found
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: Download a file by old ID
+      tags:
+      - files
+  /base/files/info/{id}:
+    get:
+      description: Get detailed information about a file by its old Cumulus ID
+      parameters:
+      - description: Old Cumulus ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: Include base64 content
+        in: query
+        name: extended
+        type: boolean
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/service.FileInfo'
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "404":
+          description: File not found
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: Get file info by old ID
+      tags:
+      - files
+  /v2/files/{id}:
+    get:
+      description: Downloads a file by its ID
+      parameters:
+      - description: File ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/octet-stream
+      responses:
+        "200":
+          description: File content
+          schema:
+            type: file
+        "404":
+          description: File not found
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: Download a file
+      tags:
+      - files
+  /v2/files/info/{id}:
     get:
       description: Get detailed information about a file
       parameters:
       - description: File ID
-        in: query
-        name: file_ID
+        in: path
+        name: id
         required: true
         type: string
       - description: Include base64 content
@@ -85,7 +174,7 @@ paths:
       summary: Get file info
       tags:
       - files
-  /api/v1/files:
+  /v2/files/upload:
     post:
       consumes:
       - multipart/form-data
@@ -130,33 +219,6 @@ paths:
           schema:
             type: string
       summary: Upload a file
-      tags:
-      - files
-  /api/v1/files/{id}:
-    get:
-      description: Downloads a file by its ID
-      parameters:
-      - description: File ID
-        in: path
-        name: id
-        required: true
-        type: string
-      produces:
-      - application/octet-stream
-      responses:
-        "200":
-          description: File content
-          schema:
-            type: file
-        "404":
-          description: File not found
-          schema:
-            type: string
-        "500":
-          description: Internal Server Error
-          schema:
-            type: string
-      summary: Download a file
       tags:
       - files
 swagger: "2.0"
